# WAVM

./: .travis.yml  CMakeLists.txt  helloworld.wast
Examples/: CMakeLists.txt
Examples/Benchmark/: Benchmark.cpp
Include/WAVM/Emscripten/: Emscripten.h
Include/WAVM/IR/: IR.h  Module.h  OperatorPrinter.h  OperatorTable.h  Operators.h  Types.h  Validate.h  Value.h
Include/WAVM/Inline/: Assert.h  BasicTypes.h  CLI.h  CMakeLists.txt  ConcurrentHashMap.h  Config.h  DenseStaticIntSet.h  Errors.h  FloatComponents.h  Hash.h  HashMap.h  HashMapImpl.h  HashSet.h  HashSetImpl.h  HashTable.h  HashTableImpl.h  IndexMap.h  IntrusiveSharedPtr.h  IsNameChar.h  Lock.h  Timing.h  (+3 more)
Include/dtoa/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dtoa.c
Lib/Emscripten/: CMakeLists.txt  Emscripten.cpp
Lib/IR/: CMakeLists.txt  DisassemblyNames.cpp  FloatPrinting.cpp  Operators.cpp  Types.cpp  Validate.cpp
Lib/LLVMJIT/: CMakeLists.txt  EmitContext.h  EmitConvert.cpp  EmitCore.cpp  EmitExceptions.cpp  EmitFunction.cpp  EmitFunctionContext.h  EmitMem.cpp  EmitModule.cpp  EmitModuleContext.h  EmitNumeric.cpp  EmitTable.cpp  EmitVar.cpp  EmitWorkarounds.h  LLVMCompile.cpp  LLVMJIT.cpp  LLVMJITPrivate.h  LLVMModule.cpp  Thunk.cpp  Win64EH.cpp
Lib/NFA/: CMakeLists.txt  NFA.cpp
Lib/Platform/: CMakeLists.txt
Lib/Platform/POSIX/: Diagnostics.cpp  Event.cpp  Exception.cpp  File.cpp  Memory.cpp  Mutex.cpp  POSIXPrivate.h  Thread.cpp
Lib/Platform/Windows/: Diagnostics.cpp  Event.cpp  Exception.cpp  File.cpp  Memory.cpp  Mutex.cpp  Thread.cpp  WindowsPrivate.h
Lib/RegExp/: CMakeLists.txt  RegExp.cpp
Lib/Runtime/: Atomics.cpp  CMakeLists.txt  Compartment.cpp  Context.cpp  Exception.cpp  Global.cpp  Intrinsics.cpp  Invoke.cpp  Linker.cpp  Memory.cpp  Module.cpp  ObjectGC.cpp  Runtime.cpp  RuntimePrivate.h  Table.cpp  WAVMIntrinsics.cpp
Lib/WASM/: CMakeLists.txt  WASMSerialization.cpp
Lib/WASTParse/: CMakeLists.txt  Lexer.cpp  Lexer.h  Parse.cpp  Parse.h  ParseFunction.cpp  ParseModule.cpp  ParseNumbers.cpp  ParseTests.cpp
Programs/wavm-disas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Programs/wavm-run/: CMakeLists.txt  wavm-run.cpp
run/: CMakeLists.txt  run.cpp
(+21 files in other folders)
